<resources>
    <string name="app_name">Planet Cafe</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home_page">Home Page</string>
    <string name="quiz_page">Quiz Page</string>
    <string name="about_page">About Page</string>
    <string name="home_menu">Home</string>
    <string name="quiz_menu">Quiz</string>
    <string name="about_menu">About</string>
    <string name="profile_menu">Profile</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="cf_desc">image of coffee post</string>
    <string name="title_placeholder">Date</string>
    <string name="coffee_placeholder">Coffee Shop</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>

    <string-array name="coffee_titles">
        <item>Institute of Astronomy</item>
        <item>Institute of Experimental Physics</item>
        <item>Institute of Theoretical Physics</item>
        <item>Library</item>
    </string-array>

    <string-array name="coffee_info">
        <item>Welcome to Institute of Astronomy!</item>
        <item>Welcome to Institute of Experimental Physics!</item>
        <item>Welcome to Institute of Theoretical Physics!</item>
        <item>Welcome to Library!</item>
    </string-array>


    <array name="coffee_images">
        <item>@drawable/cf1</item>
        <item>@drawable/cf2</item>
        <item>@drawable/cf3</item>
        <item>@drawable/cf4</item>
    </array>

</resources>