<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/light_brown"
    app:cardCornerRadius="30dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/instituteImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cf_desc" />

        <TextView
            android:id="@+id/title"
            style="@style/CoffeeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_alignBottom="@id/instituteImage"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/cardTitle"
            style="@style/CoffeePostDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/instituteImage"
            android:textColor="@android:color/white"
            android:padding="16dp"
            android:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/CoffeePostDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardTitle"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:text="@string/coffee_placeholder" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>